force-app/main/default/objects/Contact/fields/Active_User__c.field-meta.xml
<CustomField>
    <fullName>Active_User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field can only be updated from the User Object. If he/she is an Active user, will automatically update on Contact Object via future class. Case Number:Case C-00000178</description>
    <label>Active User</label>
    <type>Checkbox</type>
</CustomField>