force-app/main/default/objects/Contact/fields/Allergies__c.field-meta.xml
<CustomField>
    <fullName>Allergies__c</fullName>
    <label>Allergies</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Dairy</fullName>
            </value>
            <value>
                <fullName>Nuts</fullName>
            </value>
            <value>
                <fullName>Wheat</fullName>
            </value>
            <value>
                <fullName>Garlic</fullName>
            </value>
            <value>
                <fullName>Seafood</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>