force-app/main/default/objects/Contact/fields/Birth_Day_Month__c.field-meta.xml
<CustomField>
    <fullName>Birth_Day_Month__c</fullName>
    <description>Please enter the day and the month of the contact&apos;s birthday. Format dd/mm</description>
    <inlineHelpText>Please enter the day and the month of the Contact&apos;s birthday. Format dd/mm (5 characters or less)</inlineHelpText>
    <label>Birth Day/Month</label>
    <length>5</length>
    <type>Text</type>
</CustomField>