force-app/main/default/objects/Contact/fields/Birthday_Date_Format__c.field-meta.xml
<CustomField>
    <fullName>Birthday_Date_Format__c</fullName>
    <description>This field converts the birthday day/month field into a proper date field. The year part is irrelevant and is set to 2008 to cater for 29 Feb birthdays. This field is used in the birthday reminder scheduled job to determine which contact team members must be sent a notification task.

(CRM Birthday Reminder Case# 207 C Reinecke 2010/09)</description>
    <formula>IF((ISBLANK(Birth_Day_Month__c)),NULL,DATEVALUE( &quot;2008-&quot; &amp; RIGHT(Birth_Day_Month__c , 2)&amp;&quot;-&quot;&amp;LEFT( Birth_Day_Month__c , 2) ))</formula>
    <label>Birthday Date Format</label>
    <type>Date</type>
</CustomField>