force-app/main/default/objects/Contact/fields/BPID__c.field-meta.xml
<CustomField>
    <fullName>BPID__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>BPID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>