force-app/main/default/objects/Contact/fields/Business_Interests__c.field-meta.xml
<CustomField>
    <fullName>Business_Interests__c</fullName>
    <description>Renamed from &quot;Interested In&quot;</description>
    <inlineHelpText>Renamed from &apos;Interested In&apos;</inlineHelpText>
    <label>Business Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>CEEMEA</fullName>
            </value>
            <value>
                <fullName>Latin America</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Commodities</fullName>
            </value>
            <value>
                <fullName>Equity</fullName>
            </value>
            <value>
                <fullName>FX</fullName>
            </value>
            <value>
                <fullName>Repos</fullName>
            </value>
            <value>
                <fullName>Structured Products</fullName>
            </value>
            <value>
                <fullName>Short-Dated</fullName>
            </value>
            <value>
                <fullName>Medium-Dated</fullName>
            </value>
            <value>
                <fullName>Long-Dated</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>