force-app/main/default/objects/Contact/fields/CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>CIF_Number__c</fullName>
    <description>This is helper field which stored Account.CIF__c value and it is populated via trigger (US-1643).</description>
    <label>CIF Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>