force-app/main/default/objects/Contact/fields/CIF_Update_Error__c.field-meta.xml
<CustomField>
    <fullName>CIF_Update_Error__c</fullName>
    <description>This field Store error that occurred during propagation of changes in account hierarchy (CIF Numbers, its related to US-1842)</description>
    <inlineHelpText>This error prevent update of this contact CIF values</inlineHelpText>
    <label>CIF Update Error</label>
    <type>TextArea</type>
</CustomField>