force-app/main/default/objects/Contact/fields/Client_Group_Parent__c.field-meta.xml
<CustomField>
    <fullName>Client_Group_Parent__c</fullName>
    <description>EMEA_SOW_StandardBank_009: The Group Parent of the Client record. Calculated field so no hover information available.</description>
    <formula>HYPERLINK( &quot;/&quot; + Account.Group_Parent__r.Id , Account.Group_Parent__r.Name, &quot;_top&quot;)</formula>
    <inlineHelpText>The Group Parent of the Client record.</inlineHelpText>
    <label>Client Group Parent</label>
    <type>Text</type>
</CustomField>