force-app/main/default/objects/Contact/fields/Company_Industry__c.field-meta.xml
<CustomField>
    <fullName>Company_Industry__c</fullName>
    <description>OneHub: This field is used to store the Company Industry which is used to personalise the users News on their dashboard. (US-4589)</description>
    <label>Company Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Business Services and Consulting</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Information Technology</fullName>
            </value>
            <value>
                <fullName>Manufacturing and Construction</fullName>
            </value>
            <value>
                <fullName>Marketing and Communications</fullName>
            </value>
            <value>
                <fullName>Mining and Metals</fullName>
            </value>
            <value>
                <fullName>Oil and Gas</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Wholesale/Retail Trade</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>