force-app/main/default/objects/Contact/fields/Contact_Category__c.field-meta.xml
<CustomField>
    <fullName>Contact_Category__c</fullName>
    <description>Allows for easier filtering of contacts</description>
    <inlineHelpText>Allows for easier filtering of contacts</inlineHelpText>
    <label>Contact Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CEO</fullName>
            </value>
            <value>
                <fullName>CFO</fullName>
            </value>
            <value>
                <fullName>COO</fullName>
            </value>
            <value>
                <fullName>Group Treasurer</fullName>
            </value>
            <value>
                <fullName>Senior Executive</fullName>
            </value>
            <value>
                <fullName>Senior Manager</fullName>
            </value>
            <value>
                <fullName>Manager</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Developer</fullName>
            </value>
            <value>
                <fullName>Accounts Clerk</fullName>
            </value>
            <value>
                <fullName>Global Trader</fullName>
            </value>
            <value>
                <fullName>Agri</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>