force-app/main/default/objects/Contact/fields/Contact_Role_s_at_Client__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role_s_at_Client__c</fullName>
    <description>The functional role(s) performed by the Client Contact in dealing with Standard Bank. C-00000333</description>
    <inlineHelpText>The functional role(s) performed by the Client Contact in dealing with Standard Bank</inlineHelpText>
    <label>Contact Role(s) at Client</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Approved Dealer</fullName>
            </value>
            <value>
                <fullName>Authorised Person</fullName>
            </value>
            <value>
                <fullName>CC Survey Contact</fullName>
            </value>
            <value>
                <fullName>CommB Survey Contact</fullName>
            </value>
            <value>
                <fullName>Direct Shareholder</fullName>
            </value>
            <value>
                <fullName>GM Survey Contact</fullName>
            </value>
            <value>
                <fullName>Group KYC Contact</fullName>
            </value>
            <value>
                <fullName>IB Survey Contact</fullName>
            </value>
            <value>
                <fullName>Indirect Shareholder</fullName>
            </value>
            <value>
                <fullName>KYC Contact</fullName>
            </value>
            <value>
                <fullName>Pricing Contact</fullName>
            </value>
            <value>
                <fullName>Primary GM Research Contact</fullName>
            </value>
            <value>
                <fullName>TPS Survey Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>