force-app/main/default/objects/Contact/fields/Cost_Centre__c.field-meta.xml
<CustomField>
    <fullName>Cost_Centre__c</fullName>
    <description>Standard Bank Contact Cost Centre</description>
    <inlineHelpText>A Standard Bank Contact&apos;s Cost Centre number (255 characters or less)</inlineHelpText>
    <label>Cost Centre</label>
    <length>255</length>
    <type>Text</type>
</CustomField>