force-app/main/default/objects/Contact/fields/Dietary_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Dietary_Requirements__c</fullName>
    <label>Dietary Requirements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Halaal</fullName>
            </value>
            <value>
                <fullName>Kosher</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>No Nuts</fullName>
            </value>
            <value>
                <fullName>No Shellfish</fullName>
            </value>
            <value>
                <fullName>Ovo-Lacto vegetarian</fullName>
            </value>
            <value>
                <fullName>Vegan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>