force-app/main/default/objects/Contact/fields/Disabilities__c.field-meta.xml
<CustomField>
    <fullName>Disabilities__c</fullName>
    <inlineHelpText>Used to ensure when arranging Marketing Events that the Client Contact is not adversly impacted by the venue (255 characters or less)</inlineHelpText>
    <label>Disabilities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>