force-app/main/default/objects/Contact/fields/Do_Not_Contact__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this if you want to indicate that this contact should not be contacted for the time being, e.g. if there are any sensitive negotiations taking place. Untick when they can be contacted again</inlineHelpText>
    <label>Do Not Contact</label>
    <type>Checkbox</type>
</CustomField>