force-app/main/default/objects/Contact/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <description>Standard Bank Contact Employee Number</description>
    <inlineHelpText>A Standard Bank Contact&apos;s Employee number (20 characters or less)</inlineHelpText>
    <label>Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>