force-app/main/default/objects/Contact/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <description>When a new event is created for the Contact ,storing the event ID in to this field. 
This filed is using to trigger a Contact work flow whenever event ID is changed .</description>
    <label>Event URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>