force-app/main/default/objects/Contact/fields/Exposure_to_Management__c.field-meta.xml
<CustomField>
    <fullName>Exposure_to_Management__c</fullName>
    <description>SFP-9320[c] This field is introduced for CVCA feature to allow printable view of the Client Page similar to the CVCA Template Caro Reinecke: Ideas Inc</description>
    <inlineHelpText>This is an indication of whether the Client has been introduced to or if there are any plans to introduce the client to any key Standard Bank Management</inlineHelpText>
    <label>Exposure to Management</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>