force-app/main/default/objects/Contact/fields/ExternalCIFCountry__c.field-meta.xml
<CustomField>
    <fullName>ExternalCIFCountry__c</fullName>
    <description>SFP-10768 [1] - A 2-digit country code that identifies the country of origin for this record</description>
    <label>External CIF Country</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ExternalCIFCountry</valueSetName>
    </valueSet>
</CustomField>