force-app/main/default/objects/Contact/fields/ExternalCIFId__c.field-meta.xml
<CustomField>
    <fullName>ExternalCIFId__c</fullName>
    <description>SFP-10768 [1] A unique Id from the external system that identifies the corresponding record in that system</description>
    <label>External CIF Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>