force-app/main/default/objects/Contact/fields/FAIS_Representative__c.field-meta.xml
<CustomField>
    <fullName>FAIS_Representative__c</fullName>
    <description>Financial Advisory &amp; Intermediary Services Act Representative

Case 1051: Gift / Expense Logs : C Reinecke</description>
    <inlineHelpText>Financial Advisory &amp; Intermediary Services Act Representative</inlineHelpText>
    <label>FAIS Representative</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>