force-app/main/default/objects/Contact/fields/FinServ__ContactPreference__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ContactPreference__c</fullName>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>