force-app/main/default/objects/Contact/fields/GAUserId__c.field-meta.xml
<CustomField>
    <fullName>GAUserId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>GAUserId</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>