force-app/main/default/objects/Contact/fields/Group_Parent_CIF_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Parent_CIF_Number__c</fullName>
    <description>This is helper field to hold Group CIF value from Account (US - 1729).</description>
    <label>Group Parent CIF Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>