force-app/main/default/objects/Contact/fields/ICBC_Contact__c.field-meta.xml
<CustomField>
    <fullName>ICBC_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ICBC Contact</label>
    <type>Checkbox</type>
</CustomField>