force-app/main/default/objects/Contact/fields/Identity_Number__c.field-meta.xml
<CustomField>
    <fullName>Identity_Number__c</fullName>
    <description>Digital Onboarding: This field stores the Authorised Person&apos;s ID number and is used by the KYC Consultants during the KYC Process. This field is only visible to the Custom KYC User Profile and the Onboarding API profile.</description>
    <label>Identity Number</label>
    <type>TextArea</type>
</CustomField>