force-app/main/default/objects/Contact/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates the status of the contact at the client. This status is used to improve contact searches .Inactive Contacts are excluded from lookup searches</description>
    <inlineHelpText>Indicates the status of the contact at the client. This status is used to improve contact searches.</inlineHelpText>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>