force-app/main/default/objects/Contact/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <inlineHelpText>The type of influence that the client contact has at the client when interacting with Standard Bank</inlineHelpText>
    <label>Influence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decision Maker</fullName>
            </value>
            <value>
                <fullName>Influencer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>