force-app/main/default/objects/Contact/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <formula>LEFT( FirstName , 1)  &amp;  LEFT( LastName , 1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Initials</label>
    <type>Text</type>
</CustomField>