force-app/main/default/objects/Contact/fields/Interests__c.field-meta.xml
<CustomField>
    <fullName>Interests__c</fullName>
    <description>Select the contact&apos;s hobbies. Current list provided by SA. Fullier list to be supplied by Marketing</description>
    <inlineHelpText>Select the contact&apos;s hobbies</inlineHelpText>
    <label>Personal Interests</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baseball</fullName>
            </value>
            <value>
                <fullName>Beauty/ Health/ Wellness</fullName>
            </value>
            <value>
                <fullName>Clay Pigeon Shooting</fullName>
            </value>
            <value>
                <fullName>Comedy</fullName>
            </value>
            <value>
                <fullName>Conservation</fullName>
            </value>
            <value>
                <fullName>Cooking</fullName>
            </value>
            <value>
                <fullName>Cricket</fullName>
            </value>
            <value>
                <fullName>Cycling</fullName>
            </value>
            <value>
                <fullName>Fishing</fullName>
            </value>
            <value>
                <fullName>Football</fullName>
            </value>
            <value>
                <fullName>Golf</fullName>
            </value>
            <value>
                <fullName>Horse Racing</fullName>
            </value>
            <value>
                <fullName>Hunting</fullName>
            </value>
            <value>
                <fullName>Karaoke</fullName>
            </value>
            <value>
                <fullName>Motoring</fullName>
            </value>
            <value>
                <fullName>Mountain Biking</fullName>
            </value>
            <value>
                <fullName>Music</fullName>
            </value>
            <value>
                <fullName>Photography</fullName>
            </value>
            <value>
                <fullName>Rugby</fullName>
            </value>
            <value>
                <fullName>Running</fullName>
            </value>
            <value>
                <fullName>Theatre</fullName>
            </value>
            <value>
                <fullName>Wine Tasting</fullName>
            </value>
            <value>
                <fullName>Yachting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>