force-app/main/default/objects/Contact/fields/Is_Wrong_CIF__c.field-meta.xml
<CustomField>
    <fullName>Is_Wrong_CIF__c</fullName>
    <description>This field was created to allow reports and track all contact with wrong CIF numbers (related to US-1842)</description>
    <formula>(CIF_Number__c !=  Account.CIF__c) || 
( Group_Parent_CIF_Number__c !=  Account.Group_Parent_CIF_Number__c )</formula>
    <inlineHelpText>Indicate if Contacts CIF numbers match its related Account values</inlineHelpText>
    <label>Is Wrong CIF</label>
    <type>Checkbox</type>
</CustomField>