force-app/main/default/objects/Contact/fields/Key_Individual__c.field-meta.xml
<CustomField>
    <fullName>Key_Individual__c</fullName>
    <description>Case#1168 - 11/2011 - Rudolf Niehaus
Financial Advisory &amp; Intermediary Services Act Representative. This represents a person who is a key individual at a Financial Services Provider</description>
    <label>Key Individual</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>