force-app/main/default/objects/Contact/fields/KYC_Contact__c.field-meta.xml
<CustomField>
    <fullName>KYC_Contact__c</fullName>
    <description>US-1812 :Contacts - (6.1) Client On boarding Use existing KYC Contacts in Group (Look Up)</description>
    <formula>IF (INCLUDES (Contact_Role_s_at_Client__c, &quot;KYC Contact&quot;) || 
INCLUDES (Contact_Role_s_at_Client__c, &quot;Group KYC Contact&quot;), 
True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KYC Contact</label>
    <type>Checkbox</type>
</CustomField>