force-app/main/default/objects/Contact/fields/Name_of_Partner__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Partner__c</fullName>
    <inlineHelpText>The name of a Client Contact&apos;s Partner for family functions (50 characters or less)</inlineHelpText>
    <label>Name of Partner</label>
    <length>50</length>
    <type>Text</type>
</CustomField>