force-app/main/default/objects/Contact/fields/Non_SBG_Contact__c.field-meta.xml
<CustomField>
    <fullName>Non_SBG_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field to track a Non-SBG Contact</description>
    <inlineHelpText>Field to track a Non-SBG Contact</inlineHelpText>
    <label>Non-SBG Contact</label>
    <type>Checkbox</type>
</CustomField>